<resources>
    <string name="app_name">AutoSure</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sure">Sure</string>
    <string name="app_car_image">App Car Image</string>
    <string name="auto">Auto</string>
    <string name="username">username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profile">Profile</string>
    <string name="claim_history">Claims History</string>
    <string name="new_claim">New Claim</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="fiscal_number">Fiscal Number</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="insurance_policy_number">Insurance Policy Number</string>
    <string name="title">Title</string>
    <string name="claim_id">Claim ID</string>
    <string name="issuing_date">Issuing date</string>
    <string name="plate">Plate</string>
    <string name="claim_messages">Messages</string>
    <string name="claim_info">Claim Info</string>
    <string name="claim_issuing_date">Issuing Date</string>
    <string name="claim_id_label">Claim ID</string>
    <string name="claim_plate">Plate</string>
    <string name="claim_status">Status</string>
    <string name="claim_description">Description</string>
    <string name="claim_title">Title</string>
    <string name="submit_claim">Submit Claim</string>
    <string name="ocurrence_date">Ocurrence Date</string>
    <string name="you">You</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="no_claims_message">No claims to show</string>
</resources>
